# claw-agent-client-rs

./: Cargo.toml  README.md  linux_install.sh
.cargo/: config.toml
.github/workflows/: build.yml
config/: agent.yml  metadata.json
scripts/: linux_build.sh
scripts/builds/: linux_build.sh  macos_build.sh  windows_build.bat
scripts/installs/: macos_install.sh  windows_install.bat
src/: lib.rs  main.rs
src/auth/: hmac.rs  mod.rs
src/client/: command.rs  mod.rs  ws.rs
src/config/: loader.rs  mod.rs  types.rs  validator.rs
src/platform/: common.rs  mod.rs  traits.rs  types.rs
src/platform/linux/: dbus.rs  env.rs  mod.rs  process.rs  security.rs  system.rs  systemd.rs
src/platform/macos/: applescript.rs  env.rs  launchd.rs  mod.rs  security.rs  system.rs
src/platform/windows/: env.rs  mod.rs  registry.rs  security.rs  system.rs  wmi.rs
src/server/: client.rs  mod.rs
src/utils/: constants.rs  crypto.rs  mod.rs  network.rs
