[package]
name = "claw-agent-client-rs"
version = "0.1.0"
edition = "2021"
authors = ["laoyu"]
description = "remote agent for OpenClaw"

[features]
default = []
browser = []

[dependencies]
tokio = { version = "1.35", features = ["full", "tracing"] }
async-trait = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

tokio-tungstenite = "0.21"
futures-util = "0.3"

hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde", "clock"] }
aes = "0.8"
cipher = "0.4"
ctr = "0.9"
md-5 = "0.10"
rand = "0.8"

anyhow = "1"
thiserror = "1"

dirs = "5"
which = "5"
tempfile = "3"

sysinfo = "0.30"
whoami = "1"


[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_Security",
    "Win32_Foundation",
]}

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
objc = "0.2"
daemonize = "0.5"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"
nix = { version = "0.27", features = ["user", "process", "signal"] }
libc = "0.2"

fantoccini = { version = "0.21", optional = true }
webdriver = { version = "0.7", optional = true }

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
